--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -116,7 +116,7 @@
           </div>
 
           <div class="input-field">
-            <i class="fa-solid fa-user-tie"></i>
+            <i class="fas fa-user"></i>
             <input type="text" placeholder="Nombre Completo" />
           </div>
           <div class="input-field">
