--- a/src/app/componentes/perfiluser/perfiluser.component.css
+++ b/src/app/componentes/perfiluser/perfiluser.component.css
@@ -1,236 +1,410 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-transform: capitalize;
+  outline: none;
+  border: none;
   text-decoration: none;
+  font-weight: normal;
 }
 
-p {
-  color: #7351b3;
-}
-
-h1,
-h2 {
-  color: #4e2599;
+html {
+  font-size: 62.5%;
+  overflow: hidden;
 }
 
 body {
-  background: linear-gradient(35deg, #ba38d7, #7332eb, #a200da);
+  overflow: hidden;
   min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  background: linear-gradient(deeppink, purple);
+  padding: 5.5rem;
+}
+
+section {
+  padding: 1rem 7%;
+  min-height: 100%;
+}
+
+.btn {
+  font-size: 2rem;
+  padding: 0.7rem 4rem;
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: 0.2s linear;
+}
+
+.btn:hover {
+  background: rgba(255, 255, 255, 0.5);
+  color: #555;
+}
+
+.heading {
+  font-size: 3rem;
+  text-align: center;
+  padding: 1rem;
+  color: #fff;
+}
+
+header {
+  width: 35rem;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(0.4rem);
+  text-align: center;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+header .user {
+  padding-top: 2rem;
+}
+
+header .user img {
+  margin: 1rem 0;
+  height: 15rem;
+  width: 15rem;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.2);
+}
+
+header .user .name {
+  font-size: 3rem;
+  color: #fff;
+  padding: 0.5rem 0;
+}
+
+header .user .post {
+  font-size: 1.8rem;
+  color: #eee;
+  font-weight: lighter;
+}
+
+header .navbar {
+  padding: 1rem 3rem;
+}
+
+header .navbar ul li {
+  margin: 1rem 0;
+  list-style: none;
+}
+
+header .navbar ul li a {
+  display: block;
+  padding: 1rem;
+  font-size: 2rem;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  transition: all 0.2s linear;
+}
+
+header .navbar ul li a:hover {
+  background: rgba(255, 255, 255, 0.5);
+  color: #555;
+  transition: none;
+}
+
+.container {
+  height: 58rem;
+  width: 80rem;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(0.4rem);
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.home {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-}
-
-.dashboard {
-  width: 60%;
-  min-height: 80vh;
-  background: linear-gradient(
-    to right bottom,
-    rgba(255, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.2)
-  );
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  border-radius: 1rem;
-  overflow: hidden;
-  z-index: 3;
-  backdrop-filter: blur(5px);
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
-}
-
-.sidebar {
-  background-color: rgba(255, 255, 255, 0.2);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem;
-}
-
-.profile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.profile-img-box {
+  flex-flow: column;
   position: relative;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
+  padding-bottom: 10rem;
 }
 
-.name {
-  margin-top: 1rem;
-  color: #4e2599;
+.home h3 {
+  font-size: 2.5rem;
+  font-weight: lighter;
+  color: #eee;
 }
 
-.sidebar-item {
+.home .name span {
+  font-size: 4rem;
+  color: #fff;
+}
+
+.home .post {
+  padding: 1rem 0;
+}
+
+.home .post span {
+  font-size: 3rem;
+  color: #fff;
+}
+
+.home .share {
+  position: absolute;
+  left: 50%;
+  bottom: 5rem;
+  transform: translateX(-50%);
   display: flex;
-  align-items: center;
-  margin-bottom: 0.7rem;
-}
-
-.si-img-box {
-  position: relative;
-  width: 25px;
-  height: 25px;
-  margin-right: 1rem;
-}
-
-.si-name {
-  font-weight: 500;
-  color: #4e2599;
-}
-
-.sidebar-item:hover .si-name {
-  color: #a200da;
-}
-
-.active {
-  color: #a200da;
-}
-
-.pro {
-  display: flex;
-  align-items: center;
-  background-color: #7332eb;
   padding: 1rem;
   border-radius: 1rem;
-  color: #fff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  transition: 0.3s;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  transition: 0.2s linear;
 }
 
-.pro:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.pro-img-box {
-  position: relative;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin-left: 1rem;
-}
-
-/* main */
-
-.main {
-  padding: 2rem;
-}
-
-.skill {
-  background-color: rgba(255, 255, 255, 0.3);
+.home .share a {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   padding: 1rem 2rem;
+  margin: 1rem;
+  color: #fff;
+  font-size: 2rem;
   border-radius: 1rem;
+}
+
+.home .share a:hover {
+  background: rgba(255, 255, 255, 0.5);
+  color: #555;
+}
+
+.about .content h3 {
+  font-size: 2.5rem;
+  color: #eee;
+}
+
+.about .content h3 span {
+  color: #fff;
+}
+
+.about .content p {
+  font-size: 1.5rem;
+  color: #eee;
+  padding: 0.5rem 0;
+}
+
+.about .skills {
+  padding: 1rem 0;
+}
+
+.about .skills .progress {
+  margin: 1.5rem 0;
+  padding: 1rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1rem;
+}
+
+.about .skills .progress h3 {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  cursor: pointer;
+  font-size: 2rem;
+  color: #fff;
 }
 
-.skill:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.skill-content {
-  display: flex;
-  align-items: center;
-  width: 80%;
-}
-
-.skill-img-box {
+.about .skills .progress .bar {
   position: relative;
-  min-width: 60px;
-  height: 60px;
-  margin-right: 2rem;
-}
-
-.skill-detail {
   width: 100%;
+  height: 0.3rem;
+  margin: 1rem 0;
+  background: #555;
 }
 
-.skill-progress {
-  position: relative;
-  height: 1rem;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 1rem;
-  overflow: hidden;
-}
-
-.progress {
+.about .skills .progress .bar span {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
-  background-color: #7332eb;
+  width: 100%;
+  background: #fff;
 }
 
-.progress-1 {
-  width: 60%;
+.about .skills .progress:nth-child(1) .bar span {
+  width: 95%;
 }
 
-.progress-2 {
-  width: 40%;
+.about .skills .progress:nth-child(2) .bar span {
+  width: 85%;
 }
 
-.progress-3 {
-  width: 80%;
+.about .skills .progress:nth-child(3) .bar span {
+  width: 65%;
 }
 
-/* cricles */
+.about .skills .progress:nth-child(4) .bar span {
+  width: 70%;
+}
 
-.circle-1 {
+.service .box-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.service .box-container .box {
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.2);
+  text-align: center;
+  width: 32rem;
+}
+
+.service .box-container .box i {
+  color: #fff;
+  font-size: 4.5rem;
+  padding: 1rem 0;
+}
+
+.service .box-container .box p {
+  color: #eee;
+  font-size: 1.3rem;
+  padding: 0.5rem 5rem;
+}
+
+.education .box-container {
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+}
+
+.education .box-container .box {
+  width: 30rem;
+  padding: 0 2rem;
+  padding-bottom: 4rem;
+  border-left: 0.2rem solid #eee;
+}
+
+.education .box-container .box .year {
+  font-size: 2rem;
+  color: #eee;
+  position: relative;
+}
+
+.education .box-container .box .year::before {
+  content: "";
   position: absolute;
-  top: 5%;
-  right: 13%;
+  top: 0.3rem;
+  left: -3.1rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
-  background-color: aqua;
+  background: #fff;
 }
 
-.circle-2 {
-  position: absolute;
-  bottom: -5%;
-  left: 10%;
-  border-radius: 50%;
-  height: 300px;
-  width: 300px;
-  background-color: #d3dfbd;
+.education .box-container .box h3 {
+  font-size: 2rem;
+  color: #fff;
+  padding-top: 1rem;
 }
 
-.circle-3 {
-  position: absolute;
-  bottom: 65%;
-  left: 40%;
+.education .box-container .box p {
+  font-size: 1.3rem;
+  color: #eee;
+  padding: 1rem 0;
+}
+
+.contact .row {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 7rem;
+  align-items: center;
+}
+
+.contact .row form {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  flex-wrap: wrap;
+}
+
+.contact .row form .box {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  padding: 0 1rem;
+  margin: 1rem 0;
+  height: 4rem;
+  width: 49%;
+  font-size: 1.7rem;
+  color: #fff;
+  text-transform: none;
+}
+
+.contact .row form .box::placeholder {
+  text-transform: capitalize;
+  color: #eee;
+}
+
+.contact .row form .message {
+  padding: 1rem;
+  height: 15rem;
+  resize: none;
+  width: 100%;
+}
+
+.contact .row form .btn {
+  margin-bottom: 1rem;
+}
+
+.contact .row .content {
+  padding: 0 5rem;
+}
+
+.contact .row .content .icons {
+  padding: 1rem 0;
+}
+
+.contact .row .content .icons h3 {
+  padding: 1rem 0;
+  font-size: 2rem;
+  color: #fff;
+  display: flex;
+}
+
+.contact .row .content .icons h3 i {
+  padding-right: 0.5rem;
+}
+
+.contact .row .content .icons p {
+  font-size: 1.5rem;
+  color: #eee;
+}
+
+.theme-toggler {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  backdrop-filter: blur(0.4rem);
+}
+
+.theme-toggler span {
+  display: block;
+  height: 3rem;
+  width: 3rem;
   border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  background-color: orange;
+  cursor: pointer;
+  margin: 2rem 2.5rem;
+  box-shadow: 0 0 0 0.5rem rgba(255, 255, 255, 0.2),
+    0 1rem 2rem rgba(0, 0, 0, 0.4);
 }
